@@ -393,6 +393,7 @@ define function, begin
 384,slicecollidepoint,3,0,0,0 #check a point for collision with a slice
 385,slicecollide,2,0,0        #check a pair of slices for collision
 386,slicecontains,2,0,0       #check if slice2 is completely inside slice1
+387,clampslice,2,0,0          #move slice1 so that it is inside slice2
 
 #2xx,getnpcraw,2,0,0          #raw npc data(who,which)
 #2xx,setnpcraw,3,0,0,0        #raw npc data(who,which,val)
