@@ -62,7 +62,8 @@ WHAT IS NEW?
       "first sprite child", "next sprite sibling", "first rect child",
       "next rect sibling", "realign slice", "center slice",
       "slice collide point", "slice collide", "slice contains",
-      "set slice screen x", "set slice screen y" [James]
+      "set slice screen x", "set slice screen y", "clamp slice"
+      [James]
     * "number from string" [James]
 
   * Vikings of Midgard
